Cool Ryu designed and final design completed

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   </head>
   <body>
     <div class="main">
+      <div class="text-content">
+        <div class="how-to">
+          <p class="text1">CLICK ON RYU TO MAKE HIM THROW A HADOUKEN</p>
+          <p class="text2">
+            PRESS AND HOLD DOWN THE "X" KEY TO MAKE HIM STRIKE HIS COOL POSE!
+          </p>
+        </div>
+      </div>
       <div class="ryu">
         <div class="ryu-still"></div>
         <div class="ryu-ready"></div>
         <div class="ryu-throwing"></div>
+        <div class="ryu-cool"></div>
       </div>
       <div class="hadouken"></div>
     </div>
